Inserção da função resolveRPN
Função de resolver equação reversa inserida.
Testes  de debug inline e via for no main para análise.
inclusão de header e .c para implementação da conversão pós-fixa

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
 project(calculadora C)
 
-add_executable(calculadora converteinfixa.c)
+add_executable(calculadora main.c
+        convertein_posfixa.c
+        convertepos_infixa.c
+        expressao.c
+)
